--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -8,21 +8,36 @@ server {
     access_log /var/log/nginx/access.log;
     error_log  /var/log/nginx/error.log;
 
-    client_max_body_size 20m;
+    # Allow large file uploads (e.g., images, docs)
+    client_max_body_size 20M;
 
+    # Laravel routes and SPA fallback
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # Pass PHP scripts to PHP-FPM
     location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
         include fastcgi_params;
+        fastcgi_pass 127.0.0.1:9000;  # Works for single-container production
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
-    location ~ /\.ht {
+    # Deny access to .env and other hidden files
+    location ~ /\. {
         deny all;
+    }
+
+    # Optional: Disable access to version control files
+    location ~ /\.(git|svn|hg) {
+        deny all;
+    }
+
+    # Optional: Cache static assets (tweak durations as needed)
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff2?|ttf|svg|eot)$ {
+        expires 30d;
+        access_log off;
     }
 }
