--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
       - "8000:80"
     volumes:
       - ../src/:/var/www
-      - ./nginx:/etc/nginx/conf.d
+      - ./nginx/development.conf:/etc/nginx/conf.d/default.conf
   db:
     image: mariadb:11.3
     container_name: capsule-db
