--- a/src/.env.example
+++ b/src/.env.example
@@ -4,14 +4,14 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000 #localhost for dev only
 
-FRONTEND_URL=
-
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
+
+FRONTEND_URL=
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -28,6 +28,8 @@ DB_CONNECTION=sqlite
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+
+AUTH_GUARD=api
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
