--- a/src/composer.json
+++ b/src/composer.json
@@ -1,13 +1,15 @@
 {
-    "$schema": "https://getcomposer.org/schema.json",
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "knuckleswtf/scribe": "^5.3",
+        "dedoc/scramble": "^0.12.30",
         "kreait/firebase-php": "^7.21",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
