feat: moved auth logic to service class

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000 #localhost for dev only
+# APP_DOCS_ACCESS_TOKEN=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -67,4 +68,5 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-FIREBASE_CREDENTIALS=
+# absolute path to firebase credentials json file (location can be changed)
+FIREBASE_CREDENTIALS=storage/app/firebase/firebase_credentials.json
