--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,8 @@
+*.md
+*.log
+.env
+.env.example
+.phpunit.result.cache
 .idea
 .vscode
 .git
@@ -6,6 +11,3 @@ docker
 !docker/start.sh
 storage
 vendor
-*.md
-*.log
-*.env
